# eq-questionnaire-validator

./: .application-version  .babelrc  .coveragerc  .development.env  .editorconfig  .eslintrc.json  .gitignore  .mega-linter.yml  .pylintrc  .travis.yml  .trivyignore  Dockerfile  Dockerfile-ajv  Makefile  Pipfile  README.md  api.py  cloudbuild.yaml  docker-compose-schema-validator.yml  eslint.config.js  gulpfile.js  kubernetes.yaml.tpl  package-lock.json  package.json  pyproject.toml  requirements.txt  test_requirements.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/linters/: .markdown-lint.yml
.github/workflows/: codeql-analysis.yml  main.yml  master.yml  mega-linter.yml  pull_request.yml  release.yml
ajv/: app.js
ajv/tests/: test_questionnaire_validator.js  test_questionnaire_validator.test.js  test_status.js
app/: answer_type.py  error_messages.py
app/validation/: answer_validator.py  error_messages.py  metadata_validator.py  question_validator.py  questionnaire_schema.py  questionnaire_validator.py  schema_validator.py  validator.py
app/validation/answers/: __init__.py  (+4 more)
app/validators/: answer_code_validator.py  metadata_validator.py  questionnaire_schema.py  questionnaire_validator.py  schema_validator.py  translatable_items.py  validator.py  value_source_validator.py
app/views/: status.py  validate.py
ci/: README.md  concourse.yml  install.sh  secrets.yml.example
configs/: logging_config.py
doc/decisions/: 0001-define-piping-in-a-structured-way.md  0002-define-proxy-mechanism.md  0003-plural-forms-in-schema-text.md  0004-extend-and-improve-routing-rules.md  0005-use-consistent-value-references-in-validation.md  0006-custom-section-summaries.md  0007-custom-page-titles.md  0008-remove-final-summary-confirmation-blocks.md  0009-telephone-and-email-placeholder-transforms.md  0010-dynamic-answer-options.md  0011-user-defined-answer-codes.md  0012-dynamic-answers.md  0012-repeating-answer-options.md  0013-referencing-supplementary-data.md
eq_questionnaire_validator/: __init__.py  schema_validator.py
schema/: schema_v1.json
schemas/: common_definitions.json  feedback_v1.json  questionnaire_v1.json  value_sources.json
schemas/answer_actions/: definitions.json  redirect_to_list_add_question.json  remove_answers_for_list_item.json
schemas/answers/: address.json  checkbox.json  currency.json  date.json  definitions.json  dropdown.json  duration.json  mobile_number.json  month_year_date.json  number.json  percentage.json  radio.json  relationship.json  text_area.json  text_field.json  unit.json  year_date.json
schemas/blocks/: answer_summary.json  calculated_summary.json  confirmation.json  confirmation_question.json  definitions.json  grand_calculated_summary.json  interstitial.json  introduction.json  list_add_edit_remove_question.json  list_collector.json  list_collector_content.json  list_collector_driving_question.json  list_repeating_block.json  list_repeating_blocks.json  primary_person_list_collector.json  question.json  questionnaire.json  relationship_collector.json  section_summary.json  summary.json  unrelated_question.json  unrelated_relationship_block.json
schemas/hub/: definitions.json
schemas/individual_response/: definitions.json
schemas/lists/: currencies.json  units.json
schemas/questionnaire_flow/: definitions.json  hub.json  linear.json
schemas/questions/: calculated.json  content.json  date_range.json  definitions.json  general.json  mutually_exclusive.json  relationship.json  repeating_answer.json
schemas/rules/: boolean_rule.json  definitions.json  list_value_rule.json  non_array_value_rule.json  rule.json  value_rule.json
schemas/string_interpolation/: definitions.json
schemas/variants/: content_variant.json  question_variant.json
schemas/when_rule/: compare_to_answer_store.json  compare_to_list.json  compare_to_list_count.json  compare_to_location.json  compare_to_multiple_values.json  compare_to_value.json  definitions.json
scripts/: build.sh  run_app.sh  run_lint.sh  run_lint_python.sh  run_tests_integration.sh  run_tests_python.sh  run_tests_unit.sh  run_validator.sh
tests/: conftest.py  test_answer_code_validator.py  test_answer_id_regex.py  test_answer_validation.py  test_answer_validator.py  test_block_validator.py  test_calculated_question_validator.py  test_calculated_summary_block_validator.py  test_date_range_question_validator.py  test_list_collector_driving_question_validator.py  test_list_collector_validator.py  test_metadata_validator.py  test_placeholder_validator.py  test_primary_person_list_collector.py  test_question_validator.py  test_questionnaire_schema.py  test_questionnaire_validation.py  test_questionnaire_validator.py  test_relationship_collector_validator.py  test_routing_validator.py  test_rules_schema.py  test_schema_id_regex.py  test_schema_validation.py  test_schema_validator.py  test_textfield_validator.py  test_translatable_items.py  test_validate_schema.py  test_validate_when_rules.py  test_value_source_validator.py  test_when_validator.py  utils.py
tests/helpers/: schema_validator.py
tests/integration/: conftest.py
tests/schemas/: test_decimal_places_must_be_defined_when_using_totaliser.json  test_invalid_answer_comparison_id.json  test_invalid_answer_comparison_types.json  test_invalid_calculated_summary.json  test_invalid_date_range_period.json  test_invalid_id_in_grouped_answers_to_calculate.json  test_invalid_metadata.json  test_invalid_mm_yyyy_date_range_period.json  test_invalid_multiple_question_titles.json  test_invalid_mutually_exclusive_conditions.json  test_invalid_numeric_answers.json  test_invalid_routing_block.json  test_invalid_routing_group.json  test_invalid_routing_when_answer_count.json  test_invalid_single_date_min_max_period.json  test_invalid_string_transforms.json  test_invalid_survey_id_whitespace.json  test_invalid_yyyy_date_range_period.json  test_numeric_default_with_routing.json  test_schema_id_regex.json  test_schema_id_regex.json.json  test_string_transforms.json  test_valid_metadata.json
(+406 files in other folders)
