[tool.black]
target_version = ['py38']

[tool.poetry]
name = "eq-questionnaire-validator"
version = "0.1.0"
description = "API for questionnaire schema validation"
authors = ["ONSDigital"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.1"
jsonpointer = "^3.0.0"
structlog = "^25.0.0"
python-dateutil = "^2.9.0.post0"
jsonschema = "4.25.1"
uvicorn = "^0.35.0"
eq-translations = {git = "https://github.com/ONSDigital/eq-translations.git", rev = "v4.10.3"}
gunicorn = "^23.0.0"
referencing = "^0.36.2"
jsonpath-ng = "^1.7.0"
starlette = "^0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-sugar = "^1.0.0"
black = "^25.0.0"
flake8-quotes = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
